updated api endpoints
